feat: view 구성과 관련된 로직추가 (#11)
- 메인화면 & post 목록
- post 추가
- 상세 post 조회
- github url 이 주어졌을 때 content 가져오기 및 파싱
- content 파싱 및 html 로 변환 component

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -6,5 +6,21 @@
 </head>
 <body>
   <h1>{{setting.title}}</h1>
+
+	<a href="/post/form">새 포스트</a>
+
+	<table id="post_table" border="1">
+		<tr>
+			<th>제목</th>
+			<th>url</th>
+		</tr>
+		{{#each posts}}
+			<tr>
+				<td><a href="/post/{{id}}">{{title}}</a></td>
+				<td>{{url}}</td>
+			</tr>
+		{{/each}}
+	</table>
+
 </body>
 </html>
