--- a/src/main/resources/templates/post.hbs
+++ b/src/main/resources/templates/post.hbs
@@ -5,10 +5,9 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-<h1>post 추가</h1>
+<h1>{{post.title}}</h1>
 
-title : {{post.title}}
-content : {{{post.content}}}
+{{{post.content}}}
 
 </body>
 </html>
