--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -13,11 +13,13 @@
 		<tr>
 			<th>제목</th>
 			<th>url</th>
+			<th>조회수</th>
 		</tr>
 		{{#each posts}}
 			<tr>
 				<td><a href="/post/{{id}}">{{title}}</a></td>
 				<td>{{url}}</td>
+				<td>{{viewCount}}</td>
 			</tr>
 		{{/each}}
 	</table>
