fix: 로직 변경으로 인한 spring security 의존성,  Account 엔티티 삭제, 회원가입 기능 삭제

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -5,6 +5,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
+<a class="btn btn-primary" href="/accounts/" role="button">회원가입</a>
+
   <h1>{{setting.title}}</h1>
 
 	<a href="/post/form">새 포스트</a>
