feat: blogSetting 프론트 구현 (#24)

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -7,6 +7,7 @@
 <body>
   <h1>{{setting.title}}</h1>
 
+	<a href="/blog/setting">블로그 설정</a>
 	<a href="/post/form">새 포스트</a>
 
 	<table id="post_table" border="1">
