--- a/src/main/resources/templates/post.hbs
+++ b/src/main/resources/templates/post.hbs
@@ -7,9 +7,9 @@
 <body>
 <h1>{{post.title}}</h1>
 
-<a href="/">메인화면</a>
-
-조회수: {{post.viewCount}}
+<a href="/">메인화면</a><br>
+조회수: {{post.viewCount}}<br>
+생성날짜: {{post.createdDate}}<br>
 
 {{{post.content}}}
 
