--- a/src/main/resources/templates/postForm.hbs
+++ b/src/main/resources/templates/postForm.hbs
@@ -7,6 +7,8 @@
 <body>
 <h1>post 추가</h1>
 
+<a href="/">메인화면</a>
+
 <form action="/post" method="post" name="post">
 	title: <input type="text" name="title" value="title" required>
 	url: <input type="text" name="url" value="url" required>
