--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -7,18 +7,20 @@
 <body>
 <h1>{{setting.title}}</h1>
 
-	<a href="/blog/setting">블로그 설정</a>
-	<a href="/post/form">새 포스트</a>
+<a href="/blog/setting">블로그 설정</a>
+<a href="/post/form">새 포스트</a>
 
 <table id="post_table" border="1">
 		<tr>
 			<th>제목</th>
 			<th>조회수</th>
+			<th>생성 날짜</th>
 		</tr>
 		{{#each posts}}
 			<tr>
 				<td><a href="/post/{{id}}">{{title}}</a></td>
 				<td>{{viewCount}}</td>
+				<td>{{createdDate}}</td>
 			</tr>
 		{{/each}}
 	</table>
